fini_upper_tabs
マイページ上部のお知らせタブやることリストタブの作業終了

--- a/app/views/layouts/_profile-sidebar.html.haml
+++ b/app/views/layouts/_profile-sidebar.html.haml
@@ -99,14 +99,12 @@
             %li.index-go-list
               =link_to "#" 一覧を見る
 
+          %ul#todo-tab.mypage-item-list
+            %li.mypageitem-not-found
+              現在、やることリストはありません
+    
             
-              
-
-        
-            
-
-      %section.mypage-content__tab-list
-      %section.mypage-content__tab-deal
+  
 
     -# ここからサイドバー。共通で使えるところ。
     .side-bar
