--- a/app/views/layouts/_profile-sidebar.html.haml
+++ b/app/views/layouts/_profile-sidebar.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    sidebar書くよ
+    -#sidebar書くよ
   
   %main.mypage-container.clearfix
     %my-page-content
@@ -192,7 +192,7 @@
         \::before
 
 
-        
+
 
          
 
