--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -17,10 +17,12 @@
             text-shadow: 1px 2px 3px black; 
             
              &__up-side{
+                text-align: left;
                 font-size: 22px;
                 font-weight: 600;
              }
              &__down-side{
+                text-align: left;
                 font-size: 34px;
                 margin-bottom: 20px;
              }
