--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,7 +3,7 @@
   min-height: 100%;
   font-size: 14px;
   color: rgb(51, 51, 51);
-  background-color: rgb(245, 245, 245);
+  background-color: #eee;
   .item-box {
     padding: 24px 40px 40px;
     margin: 40px auto 0;
@@ -109,7 +109,7 @@
     }
   }
   .button-content {
-    margin: 16px 0 0;
+    margin: 16px 0 0px;
     font-weight: 400;
     &__left {
       float: left;
