--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -4,27 +4,8 @@
   %head
 
     = render 'shared/main_page_header'
-
-    .logout-contents
-      = render 'shared/logout'
-      = render 'shared/profile-sidebar'
+    = render 'shared/product-details'
 
     %footer
       = render 'shared/aside'
       = render 'shared/footer'
-
-
-
-
-    %header= render "shared/main_page_header"
-
-    .contents-box
-      %profile-main= render "shared/credit1"
-      %profile-side= render "shared/profile-sidebar"
-
-  %footer
-    = render "shared/aside"
-    = render "shared/footer"
-
-    %header= render 'shared/purchase-confirmation'
-
