--- a/app/assets/stylesheets/top_pege_middle.scss
+++ b/app/assets/stylesheets/top_pege_middle.scss
@@ -8,7 +8,7 @@
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
   font-size: 14px;
   background-color: rgb(255, 255, 255);
-  max-width: 1020px;
+  // max-width: 1020px;
   width: 100%;
   margin: 0px auto;
   height: 100%;
@@ -112,7 +112,7 @@
 
 .middle__main__block{
 
-  padding: 42px 0px 100px;
+  padding: 42px 100px 100px;
   position: relative;
   min-height: 100%;
   color: rgb(51, 51, 51);
@@ -120,9 +120,10 @@
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
   font-size: 14px;
   width: 100%;
-  height:2614px;
+  height:615px;
   box-sizing: border-box;
   display: block;
+  margin: 0 auto;
 
   &__item{
     width: 100%;
@@ -313,4 +314,56 @@
   }
             
 }
+}
+.block__area {
+  // margin: 0px;
+  box-sizing: border-box;
+  cursor: pointer;
+  height: 524px;
+  width: 1020px;
+  background-color: aqua
+
+
+
+  &__text {
+    color: #222;
+  }
+}
+
+.block__area__product {
+  height: 252px;
+  width: 188px;
+  margin: 0 0 20px 10px;
+  display: inline-block;
+  background-color: aqua
+}
+
+.exhibit_btn{
+  cursor: pointer;
+  bottom: 32px;
+  // font-size: 22px;
+  height: 160px;
+  right: 32px;
+  width: 160px;
+  position: fixed;
+  // box-sizing: border-box;
+  // text-align: center;
+    z-index: 2;
+    background-color: red
+    // border-radius: 50%;
+    // display: inline-block;
+  
+}
+.exhibit_btn__moji{
+  font-size: 22px;
+}
+.fas.fa-camera {
+    width: 60px;
+    height: 54px;
+    margin-top: 8px;
+    width: 100%;
+    max-height: 100%;
+    color: rgb(255, 255, 255);
+    display: block;
+    margin: 5px auto 0px;
 }
