--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -8,24 +8,24 @@
       %section.mypage-icon
         =link_to "#"
           %figure
-            %img{src:"/"}  -# haml記述確認する
+            %img{src:"/"}  
             %h2.bold username
           %mypage-amount
             %div
-            評価
+              評価
               %span.bold number
             %div
-            出品数
+              出品数
               %span.bold number
       %section.mypage-tab-container
         %ul.tabs
           %li.notification
             %h3
               =link_to "" 
-                %data-toggle tab  -# data-togleの記述を確認する
-                  お知らせ
+                %data-toggle 
+                    お知らせ
                     %span.mypage-number 
-                      %hidden-large  -# 要確認
+                      %hidden-large  
                              99+
           %li.todo-list 
             %h3 
@@ -33,14 +33,15 @@
                 %data-toggle tab
                   やることリスト
                     %span.mypage-number 
-                      %hidden-large  -# 要確認
+                      %hidden-large  
         %div.tab-contents
-          %ul#tab-notification.mypage-item-list.tab-pane.active #ここも怪しい
+          %ul#tab-notification.mypage-item-list.tab-pane.active 
             %li
               =link_to "#" ,class: "mypage-item-link-box"
                 %figure
                   %img.lazyloaded{data-src:"/user_image_1.jpg"}
-                %div.notification-message-box 「事務局から個別メッセージ「期間限定、売れたら梱包に使える特製ダンボールが無料でもらえます！」
+                %div.notification-message-box 
+                  「事務局から個別メッセージ「期間限定、売れたら梱包に使える特製ダンボールが無料でもらえます！」
                   %time
                     %i.icon-time
                       \::before
@@ -115,7 +116,7 @@
           %h3
             =link_to "#" %data-toggle.tab #ここ怪しいよ    
       %div.tab-content
-        %ul#mypage-tab-transaction-now.mypage-item-list %tab-pane #ここ怪しい
+        %ul#mypage-tab-transaction-now.mypage-item-list %tab-pane 
           %li.mypage-item-not-found
             取引中の商品はありません
         %ul#mypage-tab-transaction-old.mypage-item-lists tab-pane %active
@@ -127,7 +128,7 @@
                 %div.mypage-item-text 
                   「焦げ付かないフライパン」を購入しました。
                      %span 取引が完了しました
-                %div.mypage-item-status bold %done #ここ怪しい
+                %div.mypage-item-status bold %done 
                   取引完了
               %i.icon-arrow-right
                 \::before
@@ -140,7 +141,7 @@
                 %div.mypage-item-text 
                   「焦げ付かないフライパン」を購入しました。
                      %span 取引が完了しました
-                %div.mypage-item-status bold %done #ここ怪しい
+                %div.mypage-item-status bold %done 
                   取引完了
               %i.icon-arrow-right
                 \::before
@@ -152,7 +153,7 @@
                 %div.mypage-item-text 
                   「焦げ付かないフライパン」を購入しました。
                      %span 取引が完了しました
-                %div.mypage-item-status bold %done #ここ怪しい
+                %div.mypage-item-status bold %done 
                   取引完了
               %i.icon-arrow-right
                 \::before
@@ -164,7 +165,7 @@
                 %div.mypage-item-text 
                   「焦げ付かないフライパン」を購入しました。
                      %span 取引が完了しました
-                %div.mypage-item-status bold %done #ここ怪しい
+                %div.mypage-item-status bold %done 
                   取引完了
               %i.icon-arrow-right
                 \::before
@@ -176,7 +177,7 @@
                 %div.mypage-item-text 
                   「焦げ付かないフライパン」を購入しました。
                      %span 取引が完了しました
-                %div.mypage-item-status bold %done #ここ怪しい
+                %div.mypage-item-status bold %done 
                   取引完了
               %i.icon-arrow-right
                 \::before
@@ -196,105 +197,105 @@
 
   
 
-    -# -# ここからサイドバー。共通で使えるところ。
-    -# .side-bar
-    -#   %nav.mypage-nav
-    -#     %ul.mypage-nav__list
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item active'} 
-    -#           マイページ
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           お知らせ
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           やることリスト
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           いいね！一覧
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           出品する
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           出品した商品-出品中
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           出品した商品-取引中
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           出品した商品-売却済み
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           出品した商品-取引中
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           出品した商品-過去の取引
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           ニュース一覧
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           評価一覧
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           ガイド
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           お問い合わせ
-    -#           %i.fas.fa-chevron-right
+    -# ここからサイドバー。共通で使えるところ。
+    .side-bar
+      %nav.mypage-nav
+        %ul.mypage-nav__list
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item active'} 
+              マイページ
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              お知らせ
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              やることリスト
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              いいね！一覧
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              出品する
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              出品した商品-出品中
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              出品した商品-取引中
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              出品した商品-売却済み
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              出品した商品-取引中
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              出品した商品-過去の取引
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              ニュース一覧
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              評価一覧
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              ガイド
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              お問い合わせ
+              %i.fas.fa-chevron-right
 
-    -#     %h3.mypage-nav__head メルペイ
-    -#     %ul.mypage-nav__list
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           売上・振込申請
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           ポイント
-    -#           %i.fas.fa-chevron-right
+        %h3.mypage-nav__head メルペイ
+        %ul.mypage-nav__list
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              売上・振込申請
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              ポイント
+              %i.fas.fa-chevron-right
         
-    -#     %h3.mypage-nav__head 設定
-    -#     %ul.mypage-nav__list
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           プロフィール
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           発送元・お届け先住所変更
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           支払い方法
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           メール/パスワード
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           本人情報
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'} 
-    -#           電話番号の確認
-    -#           %i.fas.fa-chevron-right
-    -#       %li
-    -#         %a{href: '#', class: 'mypage-nav__list__item'}
-    -#           ログアウト
-    -#           %i.fas.fa-chevron-right
+        %h3.mypage-nav__head 設定
+        %ul.mypage-nav__list
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              プロフィール
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              発送元・お届け先住所変更
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              支払い方法
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              メール/パスワード
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              本人情報
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'} 
+              電話番号の確認
+              %i.fas.fa-chevron-right
+          %li
+            %a{href: '#', class: 'mypage-nav__list__item'}
+              ログアウト
+              %i.fas.fa-chevron-right
