fini_notification_tab
お知らせタブ作業完了

--- a/app/views/shared/_notification.html.haml
+++ b/app/views/shared/_notification.html.haml
@@ -12,6 +12,146 @@
               やることリスト
       .tab-content
         %ul#mypage-tab-notification.mypage-item-list.tab-pane.active
-          
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                =image_tag '/mercari_logo_basic_type', size: "", alt: "##" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                    メルカリさん、他3名が「メルカリ限定...」にいいね！しました 
+                %time 
+                  %i.icon-time
+                    \::before
+                  %span
+                    5時間前
+
+              %i.icon-arrow-right
+                \::before
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before   
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before 
+          %li
+            =link_to "", class: mypage-item-link, data-open: modal, data-modal: banner  
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'  
+              .mypage-item-body
+                .mypage-item-text
+                  【あと2日】参加ボタンを押すだけでポイントがもらえる！総額1億円相当還元！詳しくはこちら
+                  %time
+                    %i.icon-time
+                      \::before
+                    %span
+                      10時間前
+              %i.icon-arrow-right     
+                \::before         
 
               
