edit_todo-list_tab
やることリストタブの作業完了

--- a/app/views/shared/_notification.html.haml
+++ b/app/views/shared/_notification.html.haml
@@ -152,6 +152,9 @@
                     %span
                       10時間前
               %i.icon-arrow-right     
-                \::before         
+                \::before  
+      %ul#mypage-tab-todo.mypage-item-list.tab-pane.active 
+        %li.mypage-item-not-found.bold
+          現在、やることリストはありません        
 
               
