--- a/app/views/shared/_put_up_goods_on_sale.html.haml
+++ b/app/views/shared/_put_up_goods_on_sale.html.haml
@@ -158,3 +158,12 @@
                     公開停止中  
             %i.icon-arrow-right 
               \::before
+    %ul.mypage-history.pager
+      %li.pager-prev.pager-cell 
+        =link_to "#"
+          %i.icon-arrow-left 
+            \::before
+      %li.pager-next.pager-cell 
+        =link_to "#"
+          %i.icon-arrow-right
+            \::before
