--- a/app/views/shared/_put_up_goods_on_deal.html.haml
+++ b/app/views/shared/_put_up_goods_on_deal.html.haml
@@ -1,1 +1,32 @@
 %main.l-container.clearfix
+  .l-content 
+    %section.mypage-tab-container
+      %h2.mypage-tab-head 
+        出品した商品
+      %ul.listing-tabs
+        %li. 
+          %h3
+            =link_to "#"
+              出品中
+        %li.active
+          %h3
+            =link_to "#"
+              取引中
+        %li.active
+          %h3
+            =link_to "#"
+              売却済み
+      .tab-content
+        %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane.active
+          %li.mypage-item-not-found.bold
+            取引中の商品がありません
+            
+    %ul.mypage-history.pager
+      %li.pager-prev.pager-cell 
+        =link_to "#"
+          %i.icon-arrow-left 
+            \::before
+      %li.pager-next.pager-cell 
+        =link_to "#"
+          %i.icon-arrow-right
+            \::before
