--- a/app/views/shared/_goods_already_sold.html.haml
+++ b/app/views/shared/_goods_already_sold.html.haml
@@ -16,154 +16,103 @@
           %h3
             =link_to "#",
               売却済み
-      %ul#mypage-tab-tansaction-now.mypage-item-list.tab-pane: active   
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-            %i.icon-arrow-right 
+      .tab-content
+        %ul#mypage-tab-tansaction-old.mypage-item-list.tab-pane: active   
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before      
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_2.jpeg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
+                
+      %ul.mypage-history.pager
+        %li.pager-prev.pager-cell 
+          =link_to "#"
+            %i.icon-arrow-left 
               \::before
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    5
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    0
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
-              \::before      
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    5
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    0
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
+        %li.pager-next.pager-cell 
+          =link_to "#"
+            %i.icon-arrow-right
               \::before
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    7
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    2
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
-              \::before
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    3
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    6
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
-              \::before
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    1
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    0
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
-              \::before
-        %li
-          =link_to "#", class: mypage-item-link
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
-                  %span
-                    0
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    0
-                  .mypage-item-status.bold.action-required
-                    公開停止中  
-            %i.icon-arrow-right 
-              \::before
-    %ul.mypage-history.pager
-      %li.pager-prev.pager-cell 
-        =link_to "#"
-          %i.icon-arrow-left 
-            \::before
-      %li.pager-next.pager-cell 
-        =link_to "#"
-          %i.icon-arrow-right
-            \::before
