--- a/app/views/shared/_purchased_html.haml
+++ b/app/views/shared/_purchased_html.haml
@@ -3,7 +3,7 @@
     %section.mypage-tab-container
       %h2.mypage-tab-head 
         購入した商品
-      %ul.mypage-tabs
+      %ul.mypage-tabs
         %li.active
           %h3
             =link_to "#"
@@ -12,3 +12,19 @@
           %h3 
             =link_to "#"
               過去の取引
+      .tab-content
+        %ul#mypage-tab-transaction-now.mypage-item-list.tab-pane
+          %li.mypage-item-not-found.bold
+            取引中の商品がありません
+        %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane.active
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  清水寺
+                .mypage-item-status.bold.done
+                  売却済
+              %i.icon-arrow-right 
+                \::before
